--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   custom_navigator: ^0.3.0
   auto_route: ^2.3.2
   salomon_bottom_bar: ^3.1.0
+  material_dialogs: ^1.1.3
 
 dev_dependencies:
   flutter_test:
