--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,8 @@ dependencies:
   auto_route: ^2.3.2
   salomon_bottom_bar: ^3.1.0
   material_dialogs: ^1.1.3
+  url_launcher: ^6.1.6
+  flutter_html: ^2.2.1
 
 dev_dependencies:
   flutter_test:
@@ -62,6 +64,7 @@ dev_dependencies:
   flutter_lints: ^2.0.0
   auto_route_generator: ^2.3.2
   build_runner: ^2.1.2
+
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
