--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   loading_indicator: ^3.0.2
   dotted_border: ^2.0.0+1
   iconsax: ^0.0.8
+  package_info_plus: ^1.0.6
   file_picker: ^4.1.6
   dio: ^4.0.0
   shared_preferences: ^2.0.15
