--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   material_dialogs: ^1.1.3
   url_launcher: ^6.1.6
   flutter_html: ^2.2.1
+  firebase_crashlytics: ^3.0.6
 
 dev_dependencies:
   flutter_test:
